[package]
name = "app-port-checker"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
comfy-table = "5.0.1"
# trust-dns-resolver = "0.21.2"
